fix: icons turn red on hover & not centered

--- a/src/global.scss
+++ b/src/global.scss
@@ -162,12 +162,17 @@ body,
         max-width: fit-content;
         margin-right: 0.8rem;
         margin-bottom: 0.8rem;
+        display: flex;
+        align-items: center;
+
         &:hover {
             box-shadow: 0 2px 5px 0 var(--shadow-outer);
         }
+
         &:active {
             opacity: 0.7;
         }
+
         i {
             font-size: 1.2rem;
         }
